// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LandingComponent renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "flexDirection": "column",
      "justifyContent": "space-between",
    }
  }
>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    collapsable={undefined}
    hitSlop={undefined}
    isTVSelectable={true}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderRadius": 50,
        "display": "flex",
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
        "padding": 0,
        "position": "absolute",
        "right": 10,
        "shadowOffset": Object {
          "height": 3,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 5,
        "top": 30,
        "width": 50,
        "zIndex": 1,
      }
    }
    testID={undefined}
    tvParallaxProperties={undefined}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderRadius": 20,
        "marginTop": 38,
        "position": "absolute",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 3,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 5,
        "zIndex": 1,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View>
        <View />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flex": 1,
        "height": "100%",
        "justifyContent": "center",
        "width": "100%",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
       Loading 
    </Text>
    <View />
  </View>
</View>
`;

exports[`LandingComponent should not be affected by props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing
    foo="bar"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
                    Object {
                              "alignItems": "center",
                              "borderRadius": 50,
                              "display": "flex",
                              "height": 50,
                              "justifyContent": "center",
                              "padding": 0,
                              "position": "absolute",
                              "right": 10,
                              "shadowOffset": Object {
                                "height": 3,
                                "width": 0,
                              },
                              "shadowOpacity": 0.3,
                              "shadowRadius": 5,
                              "top": 30,
                              "width": 50,
                              "zIndex": 1,
                            }
          }
>
          <Icon
                    allowFontScaling={false}
                    name="ios-list"
                    size={30}
                    style={
                              Object {
                                        "backgroundColor": "transparent",
                                        "color": "black",
                                      }
                    }
          />
</TouchableOpacity>,
        <View
          style={
                    Object {
                              "backgroundColor": "white",
                              "borderRadius": 20,
                              "marginTop": 38,
                              "position": "absolute",
                              "shadowColor": "#000000",
                              "shadowOffset": Object {
                                "height": 3,
                                "width": 0,
                              },
                              "shadowOpacity": 0.3,
                              "shadowRadius": 5,
                              "zIndex": 1,
                            }
          }
>
          <TouchableOpacity
                    activeOpacity={0.2}
                    onPress={[Function]}
          >
                    <View>
                              <View />
                    </View>
          </TouchableOpacity>
</View>,
        <Map
          renderWhat={true}
          triggerLogoChange={[Function]}
          triggerModal={[Function]}
/>,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-between",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Icon
            allowFontScaling={false}
            name="ios-list"
            size={30}
            style={
                        Object {
                                    "backgroundColor": "transparent",
                                    "color": "black",
                                  }
            }
/>,
          "onPress": [Function],
          "style": Object {
            "alignItems": "center",
            "borderRadius": 50,
            "display": "flex",
            "height": 50,
            "justifyContent": "center",
            "padding": 0,
            "position": "absolute",
            "right": 10,
            "shadowOffset": Object {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 5,
            "top": 30,
            "width": 50,
            "zIndex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowFontScaling": false,
            "name": "ios-list",
            "size": 30,
            "style": Object {
              "backgroundColor": "transparent",
              "color": "black",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
>
            <View>
                        <View />
            </View>
</TouchableOpacity>,
          "style": Object {
            "backgroundColor": "white",
            "borderRadius": 20,
            "marginTop": 38,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 5,
            "zIndex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <View>
              <View />
</View>,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <View />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "renderWhat": true,
          "triggerLogoChange": [Function],
          "triggerModal": [Function],
        },
        "ref": "map",
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
                        Object {
                                    "alignItems": "center",
                                    "borderRadius": 50,
                                    "display": "flex",
                                    "height": 50,
                                    "justifyContent": "center",
                                    "padding": 0,
                                    "position": "absolute",
                                    "right": 10,
                                    "shadowOffset": Object {
                                      "height": 3,
                                      "width": 0,
                                    },
                                    "shadowOpacity": 0.3,
                                    "shadowRadius": 5,
                                    "top": 30,
                                    "width": 50,
                                    "zIndex": 1,
                                  }
            }
>
            <Icon
                        allowFontScaling={false}
                        name="ios-list"
                        size={30}
                        style={
                                    Object {
                                                "backgroundColor": "transparent",
                                                "color": "black",
                                              }
                        }
            />
</TouchableOpacity>,
          <View
            style={
                        Object {
                                    "backgroundColor": "white",
                                    "borderRadius": 20,
                                    "marginTop": 38,
                                    "position": "absolute",
                                    "shadowColor": "#000000",
                                    "shadowOffset": Object {
                                      "height": 3,
                                      "width": 0,
                                    },
                                    "shadowOpacity": 0.3,
                                    "shadowRadius": 5,
                                    "zIndex": 1,
                                  }
            }
>
            <TouchableOpacity
                        activeOpacity={0.2}
                        onPress={[Function]}
            >
                        <View>
                                    <View />
                        </View>
            </TouchableOpacity>
</View>,
          <Map
            renderWhat={true}
            triggerLogoChange={[Function]}
            triggerModal={[Function]}
/>,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Icon
              allowFontScaling={false}
              name="ios-list"
              size={30}
              style={
                            Object {
                                          "backgroundColor": "transparent",
                                          "color": "black",
                                        }
              }
/>,
            "onPress": [Function],
            "style": Object {
              "alignItems": "center",
              "borderRadius": 50,
              "display": "flex",
              "height": 50,
              "justifyContent": "center",
              "padding": 0,
              "position": "absolute",
              "right": 10,
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 5,
              "top": 30,
              "width": 50,
              "zIndex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "allowFontScaling": false,
              "name": "ios-list",
              "size": 30,
              "style": Object {
                "backgroundColor": "transparent",
                "color": "black",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
>
              <View>
                            <View />
              </View>
</TouchableOpacity>,
            "style": Object {
              "backgroundColor": "white",
              "borderRadius": 20,
              "marginTop": 38,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 5,
              "zIndex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <View>
                <View />
</View>,
              "onPress": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <View />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "renderWhat": true,
            "triggerLogoChange": [Function],
            "triggerModal": [Function],
          },
          "ref": "map",
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`LandingComponent should not be affected by props 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing
    foo="bar"
    random="prop"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
          style={
                    Object {
                              "alignItems": "center",
                              "borderRadius": 50,
                              "display": "flex",
                              "height": 50,
                              "justifyContent": "center",
                              "padding": 0,
                              "position": "absolute",
                              "right": 10,
                              "shadowOffset": Object {
                                "height": 3,
                                "width": 0,
                              },
                              "shadowOpacity": 0.3,
                              "shadowRadius": 5,
                              "top": 30,
                              "width": 50,
                              "zIndex": 1,
                            }
          }
>
          <Icon
                    allowFontScaling={false}
                    name="ios-list"
                    size={30}
                    style={
                              Object {
                                        "backgroundColor": "transparent",
                                        "color": "black",
                                      }
                    }
          />
</TouchableOpacity>,
        <View
          style={
                    Object {
                              "backgroundColor": "white",
                              "borderRadius": 20,
                              "marginTop": 38,
                              "position": "absolute",
                              "shadowColor": "#000000",
                              "shadowOffset": Object {
                                "height": 3,
                                "width": 0,
                              },
                              "shadowOpacity": 0.3,
                              "shadowRadius": 5,
                              "zIndex": 1,
                            }
          }
>
          <TouchableOpacity
                    activeOpacity={0.2}
                    onPress={[Function]}
          >
                    <View>
                              <View />
                    </View>
          </TouchableOpacity>
</View>,
        <Map
          renderWhat={true}
          triggerLogoChange={[Function]}
          triggerModal={[Function]}
/>,
      ],
      "style": Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "space-between",
      },
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <Icon
            allowFontScaling={false}
            name="ios-list"
            size={30}
            style={
                        Object {
                                    "backgroundColor": "transparent",
                                    "color": "black",
                                  }
            }
/>,
          "onPress": [Function],
          "style": Object {
            "alignItems": "center",
            "borderRadius": 50,
            "display": "flex",
            "height": 50,
            "justifyContent": "center",
            "padding": 0,
            "position": "absolute",
            "right": 10,
            "shadowOffset": Object {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 5,
            "top": 30,
            "width": 50,
            "zIndex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "allowFontScaling": false,
            "name": "ios-list",
            "size": 30,
            "style": Object {
              "backgroundColor": "transparent",
              "color": "black",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
>
            <View>
                        <View />
            </View>
</TouchableOpacity>,
          "style": Object {
            "backgroundColor": "white",
            "borderRadius": 20,
            "marginTop": 38,
            "position": "absolute",
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 3,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 5,
            "zIndex": 1,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <View>
              <View />
</View>,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <View />,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "renderWhat": true,
          "triggerLogoChange": [Function],
          "triggerModal": [Function],
        },
        "ref": "map",
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
            style={
                        Object {
                                    "alignItems": "center",
                                    "borderRadius": 50,
                                    "display": "flex",
                                    "height": 50,
                                    "justifyContent": "center",
                                    "padding": 0,
                                    "position": "absolute",
                                    "right": 10,
                                    "shadowOffset": Object {
                                      "height": 3,
                                      "width": 0,
                                    },
                                    "shadowOpacity": 0.3,
                                    "shadowRadius": 5,
                                    "top": 30,
                                    "width": 50,
                                    "zIndex": 1,
                                  }
            }
>
            <Icon
                        allowFontScaling={false}
                        name="ios-list"
                        size={30}
                        style={
                                    Object {
                                                "backgroundColor": "transparent",
                                                "color": "black",
                                              }
                        }
            />
</TouchableOpacity>,
          <View
            style={
                        Object {
                                    "backgroundColor": "white",
                                    "borderRadius": 20,
                                    "marginTop": 38,
                                    "position": "absolute",
                                    "shadowColor": "#000000",
                                    "shadowOffset": Object {
                                      "height": 3,
                                      "width": 0,
                                    },
                                    "shadowOpacity": 0.3,
                                    "shadowRadius": 5,
                                    "zIndex": 1,
                                  }
            }
>
            <TouchableOpacity
                        activeOpacity={0.2}
                        onPress={[Function]}
            >
                        <View>
                                    <View />
                        </View>
            </TouchableOpacity>
</View>,
          <Map
            renderWhat={true}
            triggerLogoChange={[Function]}
            triggerModal={[Function]}
/>,
        ],
        "style": Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
        },
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <Icon
              allowFontScaling={false}
              name="ios-list"
              size={30}
              style={
                            Object {
                                          "backgroundColor": "transparent",
                                          "color": "black",
                                        }
              }
/>,
            "onPress": [Function],
            "style": Object {
              "alignItems": "center",
              "borderRadius": 50,
              "display": "flex",
              "height": 50,
              "justifyContent": "center",
              "padding": 0,
              "position": "absolute",
              "right": 10,
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 5,
              "top": 30,
              "width": 50,
              "zIndex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "allowFontScaling": false,
              "name": "ios-list",
              "size": 30,
              "style": Object {
                "backgroundColor": "transparent",
                "color": "black",
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacity
              activeOpacity={0.2}
              onPress={[Function]}
>
              <View>
                            <View />
              </View>
</TouchableOpacity>,
            "style": Object {
              "backgroundColor": "white",
              "borderRadius": 20,
              "marginTop": 38,
              "position": "absolute",
              "shadowColor": "#000000",
              "shadowOffset": Object {
                "height": 3,
                "width": 0,
              },
              "shadowOpacity": 0.3,
              "shadowRadius": 5,
              "zIndex": 1,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "activeOpacity": 0.2,
              "children": <View>
                <View />
</View>,
              "onPress": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <View />,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "renderWhat": true,
            "triggerLogoChange": [Function],
            "triggerModal": [Function],
          },
          "ref": "map",
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Testing functions triggerLogoChange changes the logo, when the function is called 1`] = `undefined`;

exports[`Testing functions triggerLogoChange changes the logo, when the function is called 2`] = `undefined`;

exports[`Testing functions triggerLogoChange changes the logo, when the function is called 3`] = `undefined`;

exports[`Testing functions triggerLogoChange changes the logo, when the function is called 4`] = `undefined`;

exports[`Testing functions triggers a rerender 1`] = `undefined`;

exports[`Testing functions triggers the modal when caled 1`] = `undefined`;
